# ClaimsGym

./: .gitignore  CODEX.md  README.md  inference.py  openenv.yaml  pyproject.toml
claimsops_env/: __init__.py  agent_interface.py  calibration.py  environment.py  generator.py  models.py  policies.py  rubric.py  scenario_templates.py  server.py  suite_runner.py  suites.py  tools.py  tracing.py  verifier.py
configs/: reward_weights.yaml
docs/: architecture.md
server/: __init__.py  app.py
tests/: test_agent_interface.py  test_calibration.py  test_casework_depth.py  test_environment.py  test_events.py  test_rewards.py  test_rubric.py  test_scenarios.py  test_suites.py  test_tools.py  test_tracing.py
training/: __init__.py  calibrate_rewards.py  eval_baseline.py  generate_sft_data.py  hf_inference.py  local_baseline.py  run_suite.py  trace_episode.py  train_grpo.py
