[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimsops-gym"
version = "0.1.0"
description = "Synthetic auto claims lifecycle environment for OpenEnv-compatible RL training"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "openai>=2.30",
  "openenv-core>=0.2.3",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0",
]
train = [
  "accelerate>=1.10",
  "datasets>=4.0",
  "peft>=0.17",
  "torch>=2.4",
  "transformers>=4.50",
  "trl>=1.2.0",
]
train-vllm = [
  "vllm>=0.8",
]
train-unsloth = [
  "unsloth",
]

[project.scripts]
server = "server.app:main"
claimsops-server = "claimsops_env.server:main"
claimsops-baseline = "training.eval_baseline:main"
claimsops-generate-sft = "training.generate_sft_data:main"

[tool.setuptools.packages.find]
include = ["claimsops_env*", "server*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
